--- a/app/src/components/PhotoDisplay/style.css
+++ b/app/src/components/PhotoDisplay/style.css
@@ -1,3 +1,4 @@
 .react-draggable {
     display: inline-block;
+    position: absolute;
 }
