--- a/app/src/components/QuoteDisplay/style.css
+++ b/app/src/components/QuoteDisplay/style.css
@@ -1,5 +1,6 @@
 .react-draggable {
     display: inline-block;
+    position: absolute;
 }
 
 .handle {
